# notespace-editor

./: Cargo.toml  README.md
locales/: v2.yml
src/: app_configuration.rs  app_const.rs  app_io.rs  app_main.rs  app_message.rs  app_state.rs  app_statusbar.rs  app_style.rs  app_toolbar.rs  main.rs  main_window.rs  ui_const.rs  ui_style.rs  ui_util.rs
src/controls/: mod.rs  statusbar.rs  toolbar.rs
src/keyboard/: keybind_action.rs  keybind_manager.rs  mod.rs
